# wikidata-identifier-extractor

./: CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PACKAGE_INFO.txt  PACKAGE_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  README.md  example.py  pyproject.toml  setup.py
docs/: GUIDE.md
wikidata_identifier_extractor/: __init__.py  extractor.py
wikidata_identifier_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
