[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikidata-identifier-extractor"
version = "0.1.0"
description = "Extract cross-platform media identifiers from Wikidata (IMDb, Trakt, TMDB, etc.)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Waseem", email = "your.email@example.com"}
]
maintainers = [
    {name = "Waseem", email = "your.email@example.com"}
]
keywords = [
    "wikidata",
    "imdb",
    "trakt",
    "tmdb",
    "media",
    "identifiers",
    "movies",
    "tv-shows",
    "sparql"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/wa8eem/wikidata-identifier-extractor"
Documentation = "https://github.com/wa8eem/wikidata-identifier-extractor#readme"
Repository = "https://github.com/wa8eem/wikidata-identifier-extractor.git"
Issues = "https://github.com/wa8eem/wikidata-identifier-extractor/issues"
Changelog = "https://github.com/wa8eem/wikidata-identifier-extractor/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["wikidata_identifier_extractor"]

[tool.setuptools.package-data]
wikidata_identifier_extractor = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=wikidata_identifier_extractor"
